# Canton_Ginie

./: .gitignore  COMMUNITY_CONTRACTS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_DEPLOYMENT_STATUS.md  INVITE_CODES_BATCH3.sql  INVITE_CODES_BATCH3.txt  OPENAI_COST_ANALYSIS.md  QUICKSTART.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  RELEASE_NOTES_v0.1.0.md  TESTING_GUIDE.md  canton-sandbox-memory.conf  canton-sandbox.conf  docker-compose.yml  ginie-project-0.0.1 (3).dar  pyproject.toml  start-all-services.ps1  start-frontend.ps1
.github/ISSUE_TEMPLATE/: community-contract.yml
.github/workflows/: ci.yml
backend/: .env.example  .template_cache.json  Dockerfile  alembic.ini  config.py  deploy-railway.ps1  load_codes.py  load_codes_simple.py  railway-deploy-simple.ps1  requirements.txt
backend/agents/: compile_agent.py  deploy_agent.py  fix_agent.py  intent_agent.py  project_writer_agent.py  proposal_injector.py  test_compile_agent.py  test_writer_agent.py  writer_agent.py
backend/api/: admin_routes.py  audit_routes.py  auth_routes.py  badge_routes.py  ledger_routes.py  main.py  middleware.py  models.py  profile_routes.py  routes.py  ws_routes.py
backend/auth/: __init__.py  crypto.py  email_auth.py  invite_manager.py  jwt_manager.py  otp_manager.py  party_manager.py
backend/canton/: canton_client_v2.py
backend/daml/: error_classifier.py
backend/db/: __init__.py  models.py  session.py
backend/pipeline/: orchestrator.py  spec_synth.py  state.py
backend/rag/: curated_loader.py  loader.py  vector_store.py
backend/sandbox/: daml_sandbox.py
backend/scripts/: audit_report.txt  enterprise_audit_test.py  final_system_audit.txt  full_system_audit.py  generate_initial_invites.py  generate_synthetic_patterns.py  grant_audit.py  harvest_patterns.py  init_databases.sh  init_db.sql  insert_invite_codes.sql  inspect_job_audit.py  load_invite_codes_api.py
backend/security/: audit_prompts.py  generation_rules.py  hybrid_auditor.py  invariant_analyzer.py  (+2 more)
canton/: Dockerfile.simple  check-logs.md  entrypoint-simple.sh
docs/: MY_CONTRACTS_PLAN.md  PROPOSAL_M1_UPDATE.md  SLACK_OUTREACH.md  persistent-contract-storage.md
frontend/: SKILL.md  package-lock.json  package.json
frontend_dark/: START_LOCAL.md
frontend_light/: README.md
ginie/: __init__.py
ginie-saas-frontend/: vercel.json
keys/: generate_keys.py
scripts/: gen_invite_codes.py  start-canton-sandbox.ps1  test_10_contracts.py
sdk/: README.md  setup.py
(+88 files in other folders)
